add address extraction

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="accountIndex">
       <label for="accountIndex">account index</label>
-      <input type="number" name="accountIndex" min="0"/>
+      <input type="number" name="accountIndex" min="1"/>
     </div>
     <div class="accountType">
       <label for="accountType">account type</label>
@@ -29,14 +29,16 @@
     </div>
     <div class="addressIndex">
       <label for="addressIndex">address index</label>
-      <input type="number" name="addressIndex" min="0"/>
+      <input type="number" name="addressIndex" min="1"/>
     </div>
     <div class="button">
       <button>Recorvery to WIF</button>
     </div>
     <div>WIF:</div>
-    <div class="result">
-
+    <div class="wif">
+    </div>
+    <div>Address:</div>
+    <div class="address">
     </div>
   </div>
 </body>
