change input to option

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     </div>
     <div class="accountIndex">
       <label for="accountIndex">account index</label>
-      <input type="number" name="accountIndex" min="1"/>
+      <!-- <input type="number" name="accountIndex" min="1"/> -->
+      <select name="accountIndex">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
     </div>
     <div class="accountType">
       <label for="accountType">account type</label>
