--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <input type="number" name="addressIndex" min="1"/>
     </div>
     <div class="button">
-      <button>Recorvery to WIF</button>
+      <button>Recover to WIF</button>
     </div>
     <div>WIF:</div>
     <div class="wif">
