--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Restore your access key into wallet</title>
+  <script type="text/javascript" src="./mnemonic/mnemonic.json"></script>
+  <script src="./js/type-search.js"></script>
   <script src="./libs/bitcoinjs-lib/bitcoinjs-lib.js"></script>
   <script src="./libs/bip39/bip39.js"></script>
   <script src="./js/index.js"></script>
