update the label name

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input name="seed" size="100"/>
     </div>
     <div class="accountIndex">
-      <label for="accountIndex">account index</label>
+      <label for="accountIndex">account #number (1-5)</label>
       <!-- <input type="number" name="accountIndex" min="1"/> -->
       <select name="accountIndex">
         <option value="1">1</option>
@@ -30,14 +30,14 @@
       </select>
     </div>
     <div class="accountType">
-      <label for="accountType">account type</label>
+      <label for="accountType">chain type</label>
       <select name="accountType">
         <option value="0" selected>external</option>
         <option value="1">change</option>
       </select>
     </div>
     <div class="addressIndex">
-      <label for="addressIndex">address index</label>
+      <label for="addressIndex">address #number# (chose which address wish to restore)</label>
       <input type="number" name="addressIndex" min="1"/>
     </div>
     <div class="button">
