--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="accountIndex">
       <label for="accountIndex">account #number (1-5)</label>
-      <!-- <input type="number" name="accountIndex" min="1"/> -->
+      
       <select name="accountIndex">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -48,6 +48,17 @@
     </div>
     <div>Address:</div>
     <div class="address">
+    </div>
+    <div class="nonHd-button">
+      <button>Recover to NON-HD wallet</button>
+    </div>
+    <div width="100%">
+      <label for="noHD-wif">NON-HD-WIF:</label><br/>
+      <input class="noHD-wif" name="noHD-wif" size="135"/>
+    </div>
+    <div width="100%">
+      <label for="bip32-ext">bip32 Rootkey:</label><br/>
+      <input class="bip32-ext" name="bip32-ext" size="135"/>
     </div>
   </div>
 </body>
