--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <script src="./libs/bitcoinjs-lib/bitcoinjs-lib.js"></script>
   <script src="./libs/bip39/bip39.js"></script>
   <script src="./js/index.js"></script>
-  <style>
+  <style type="text/css" media="screen, print">
+    @font-face {
+      font-family: "Kevit-Medium";
+      src: url("../font/Kievit-Medium.tff");
+    }
     * {
-      font-family:'Kienvit-Medium'
+      font-family:'Kienit-Medium',serif;
     }
   </style>
 </head>
