change font type

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
   <script src="./libs/bitcoinjs-lib/bitcoinjs-lib.js"></script>
   <script src="./libs/bip39/bip39.js"></script>
   <script src="./js/index.js"></script>
+  <!-- <link rel="stylesheet" href="/font/GothamNarrow-Black.tff"></link> -->
   <style type="text/css" media="screen, print">
     @font-face {
-      font-family: "Kevit-Medium";
-      src: url("../font/Kievit-Medium.tff");
+      font-family: "GothamNarrow-Black";
+      src: local("GothamNarrow-Black"),url("./font/GothamNarrow-Black.ttf");
     }
     * {
-      font-family:'Kienit-Medium',serif;
+      font-family:'GothamNarrow-Black',serif;
+      /* font-weight: bolder; */
+      /* font-size: 15px; */
     }
   </style>
 </head>
