modify the term show up

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </select>
     </div>
     <div class="addressIndex">
-      <label for="addressIndex">address #number# (chose which address wish to restore)</label>
+      <label for="addressIndex">address #number# (chose which address you wish to restore)</label>
       <input type="number" name="addressIndex" min="1"/>
     </div>
     <div class="button">
