--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <input type="number" name="addressIndex" id="addressIndex" min="1"/>
     </div>
     <div class="button">
-      <button id="button">Recover to WIF</button>
+      <div id="button">Recover to WIF</div>
     </div>
     <div>WIF:</div>
     <div class="wif" id="wif">
