--- a/recovery-page.html
+++ b/recovery-page.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Restore your access key into wallet</title>
-  <script
+<script type="text/javascript" src="https://yuanyu90221.github.io/recover_seed/mnemonic/mnemonic.json"></script>
+<script src="https://yuanyu90221.github.io/recover_seed/libs/bip39/bip39.js"></script>
+<script src="https://yuanyu90221.github.io/recover_seed/libs/bitcoinjs-lib/bitcoinjs-lib.js"></script>
+<script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
@@ -15,26 +11,9 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">  
 <script type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js?ver=180120181119'></script>
-  <script type="text/javascript" src="./mnemonic/mnemonic.json"></script>
-  <script src="./js/type-search.js"></script>
-  <script src="./libs/bitcoinjs-lib/bitcoinjs-lib.js"></script>
-  <script src="./libs/bip39/bip39.js"></script>
-  <script src="./js/index.js"></script>
-  <!-- <link rel="stylesheet" href="/font/GothamNarrow-Black.tff"></link> -->
-  <style type="text/css" media="screen, print">
-    @font-face {
-      font-family: "GothamNarrow-Black";
-      src: local("GothamNarrow-Black"),url("./font/GothamNarrow-Black.ttf");
-    }
-    * {
-      font-family:'GothamNarrow-Black',serif;
-      /* font-weight: bolder; */
-      /* font-size: 15px; */
-    }
-  </style>
-</head>
-<body>
-  <h2>Seed Restorer</h2>
+<script src="https://yuanyu90221.github.io/recover_seed/js/type-search.js"></script>
+<script src="https://yuanyu90221.github.io/recover_seed/js/index.js"></script>
+<h2>Seed Restorer</h2>
   <form>
     <div class="form-group">
       <label for="seed">seed</label>
@@ -76,5 +55,3 @@
       </div>
     </div>
   </form>
-</body>
-</html>
